# WEB_dz_13

part_one/: main.py  pyproject.toml
part_one/conf/: config.py
part_one/postgres-data/: postmaster.pid
part_one/postgres-data/base/13481/: pg_internal.init
part_one/postgres-data/global/: pg_control  pg_internal.init
part_one/postgres-data/pg_stat/: db_13481.stat  global.stat
part_one/postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
part_one/repository/: users.py
part_one/routes/: auth.py  users.py
part_one/services/: auth.py  email.py
part_two/: pyproject.toml
part_two/hw_project/: settings.py
part_two/quotes/: utils.py  views.py
part_two/users/: urls.py  views.py
part_two/utils/: add_quotes_to_mongo.py
